[package]
name = "relevant"
version = "0.4.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
repository = "https://github.com/omni-viral/relevant.git"
license = "MIT/Apache-2.0"
description = "A small utility type to emulate must-use types"

[features]
panic = []
serde-1 = ["serde"]
std = []

[dependencies]
cfg-if = "0.1"
log = { version = "0.4", optional = true }
backtrace = { version = "0.3.13", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[package.metadata.docs.rs]
features = ["backtrace", "log", "serde-1"]
